--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jasmine"]
 	path = jasmine
 	url = git://github.com/pivotal/jasmine.git
+[submodule "underscore"]
+	path = underscore
+	url = git://github.com/documentcloud/underscore.git
